# caql

./: .gitignore  AGENTS.md  AQL_Header_System_Summary.md  CLAUDE.md  CMakeLists.txt  Makefile  a.txt  analyze_deps.py  benchmark_aql.py  benchmark_aql.sh  benchmark_python.py  comprehensive_benchmark.py  count_tokens  count_tokens.c  debug_complex_issue.aql  debug_deep_tail_call.aql  debug_direct_expression.aql  debug_enum  debug_enum.c  debug_enum2  debug_enum2.c  debug_exact_copy.aql  debug_func.aql  debug_issue1_third_return.aql  debug_issue2_string_return.aql  debug_jmp  debug_jmp.c  debug_len_keyword.aql  debug_loadi.c  debug_medium_tail_call.aql  debug_mixed_three.aql  debug_mixed_types.aql  debug_multi_position.aql  debug_multi_return.aql  debug_nested_issue.aql  debug_no_params.aql  debug_original_pattern.aql  debug_recursion_depth.aql  debug_register_allocation.aql  debug_register_issue.aql  (+40 more)
docs/: AQL_Complete_System_Report.md  AQL_String_System_Report.md  JIT_EFFECTIVENESS_PROOF.md  JIT_IMPROVEMENTS_SUMMARY.md  MVP_Summary.md  TypeInference_System_Report.md  ai-coding-design.md  ai-workflow-syntax.md  aql_bytecode_best_practices.md  aql_function_closure_roadmap.md  aql_oap_paradigm_design.md  aql_oap_summary.md  aql_self_evolution_architecture.md  aql_self_evolution_examples.md  aql_stack_limitation_analysis.md  aql_stack_optimization_final_report.md  aql_tail_call_optimization_design.md  arch.md  avm_core_testing_status.md  closure-stackframe-design.md  compiler-vectorization.md  container-design.md  container_refactor_plan.md  crd-design.md  debug-design.md  debug-req.md  debug-vt.md  debug_IMPLEMENTATION_GUIDE.md  debug_parameters.md  debug_system_overview.md  design.md  design_builtin_print_minimal.md  design_for_range.md  design_func_v0.md  design_func_v0_revised.md  error-system-design.md  funcall_unification_proposal.md  jit_verification_guide.md  lua-table-analysis.md  lua55-alignment.md  (+24 more)
examples/: hello.aql
olddocs/: AQL_Development_Status.md  Allocator_Refactoring_Summary.md  Array_Memory_Allocation_Fix.md  Executor_GC_Update_Summary.md  Function_Compilation_Progress.md  GC_Fix_Summary.md  GC_Instructions_Reference.md  Phase2_ObjectAllocator_Results.md  Phase3_GC_System_Results.md  REPL_Let_Fix_Summary.md  Variable_Persistence_Fix.md  ai-coding.md  alloc-design.md  annotation_analysis.md  aql-arch-discussion.md  aql-arch.md  aql-arch.md.bak  aql-req.md  closure-design.md  gc-design.md  load-design.md  meta_edsl_summary.md  metaprogramming_explanation.md  metaprogramming_guide.md  multidim_array_analysis.md  newarray-design.md  register-pool-design.md  simple_arch.md  test-r.md  产品立项书.md
src/: aapi.c  aapi.h  aarray.c  aarray.h  aauxlib.h  acode.c  acode.c.debug_backup  acode.h  acodegen.c  acodegen.h  acodegen_templates.c  aconf.c  aconf.h  acontainer.c  acontainer.h  acontainer_old.c.bak  adatatype.c  adatatype.h  adebug.c  adebug.h  adebug_internal.c  adebug_internal.h  adebug_user.c  adebug_user.h  adict.c  adict.h  ado.c  ado.c.debug_backup  (+68 more)
(+408 files in other folders)
